adds changes in css

--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
                                 <div class="skill-box skill1 html-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/html.svg"
+                                        src="/assets/img/html-icon.png"  
                                         alt="html-icon"
                                     />
                                 </div>
                                 <div class="skill-box skill2 css-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/css.svg"
+                                        src="/assets/img/css.png"
                                         alt="css-icon"
                                     />
                                 </div>
                                 <div class="skill-box skill3 js-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/js.svg"
+                                        src="/assets/img/js.png"
                                         alt="js-icon"
                                     />
                                 </div>
@@ -207,39 +207,54 @@
                             <div class="skill-box skill6"> <img class="icones-skills" src="/assets/img/java.svg" alt="java-icon"> </div>
                             
                             <div class="skill-box skill8"> <img class="icones-skills" src="/assets/img/sql.svg" alt="sql-icon"> </div> -->
-                                <div class="skill-box skill7">
+                                <div class="skill-box skill7 json-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/react.svg"
-                                        alt="react-icon"
+                                        src="/assets/img/json.png"
+                                        alt="json-icon"
                                     />
                                 </div>
                                 <div class="skill-box skill8">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/styled 1.svg"
+                                        src="/assets/img/react.png"
                                         alt="react-icon"
                                     />
                                 </div>
-                                <div class="skill-box skill13 sass-skill">
+                                <div class="skill-box skill13 python-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/sass.svg"
-                                        alt="sass-icon"
+                                        src="/assets/img/python.png"
+                                        alt="python-icon"
                                     />
                                 </div>
                                 <div class="skill-box skill9 git-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/git.svg"
+                                        src="/assets/img/git.png"
                                         alt="git-icon"
                                     />
                                 </div>
-                                <div class="skill-box skill10 github-skill">
+                                <div class="skill-box skill20 mongodb-skill">
                                     <img
                                         class="icones-skills"
-                                        src="/assets/img/github.svg"
-                                        alt="github-icon"
+                                        src="/assets/img/mongobd.png"
+                                        alt="mongodb-icon"
+                                    />
+                                </div>
+
+                                <div class="skill-box skill21 postgres-skill">
+                                    <img
+                                        class="icones-skills"
+                                        src="/assets/img/postgres.png"
+                                        alt="postgres-icon"
+                                    />
+                                </div>
+                                <div class="skill-box skill22 api-skill">
+                                    <img
+                                        class="icones-skills"
+                                        src="/assets/img/api.png"
+                                        alt="api-icon"
                                     />
                                 </div>
                                 <!--  <div class="skill-box skill11"> <img class="icones-skills" src="/assets/img/bootstrap.svg" alt="bootstrap-icon"> </div> -->
@@ -247,8 +262,7 @@
                             </div>
                             <div class="conteiner-descricao">
                                 <p class="texto-descricao">
-                                    /* Passe o mouse por cima de alguma
-                                    habilidade para ler a descrição */
+                                    show skill description
                                 </p>
                             </div>
                         </div>
@@ -274,7 +288,7 @@
                             >
                                 <img
                                     class="transparente"
-                                    src="/assets/img/githubff.svg"
+                                    src="/assets/img/github.png"
                                     alt="github-icon"
                                 />
                             </a>
@@ -286,8 +300,8 @@
                             >
                                 <img
                                     class="transparente"
-                                    src="/assets/img/linkedinff.svg"
-                                    alt="github-icon"
+                                    src="/assets/img/linkedin.png"
+                                    alt="linkedin   -icon"
                                 />
                             </a>
                         </div>
