--- a/index.html
+++ b/index.html
@@ -75,12 +75,8 @@
                                 </p>
                                 <br />
                                 <div class="linkedin">
-                                    <a
-                                        href="https://www.linkedin.com/in/juliana-valenti/"
-                                        target="_blank"
-                                        class="link"
-                                        >Linkedin</a
-                                    >
+                                    <a id="pdfLink" href="assets/img/resume.pdf">GET MY RESUME</a>
+                                    
                                 </div>
                             </div>
                             <div class="avatar">
@@ -345,5 +341,6 @@
         <script src="assets/js/typing.js"></script>
         <script src="assets/js/skills.js"></script>
         <script src="assets/js/fadeout.js"></script>
+        <script src="assets/js/resume.js" ></script>
     </body>
 </html>
