fixes buttons script file

--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
                   <img class="about-me-intro" src="assets/img/IMG_3485.jpg" alt="click">
                   <div class="about-content">
                     <p class="centered-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sit, earum error ab delectus id, incidunt cumque possimus accusamus eligendi excepturi quis temporibus sint corrupti molestiae commodi nemo, expedita debitis.</p>
-                    
+
                     <div class="centered-buttons">
                       <button onclick="loadPage1()">Professional Experience</button>
-                      <button onclick="loadPage2()">Adventure Experience</button>
+                      <button onclick="loadPage2()">Cultural Experience</button>
+                      
                     </div>
                   </div>
                 </div>
