--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <!-- about me -->
           <section id="about-me">
-            <h2>About Me</h2>
+            <h2 class="about-me-h2">ABOUT ME</h2>
             <div class="about-me">
             
                 <div id="about-me-content"></div>
@@ -111,8 +111,8 @@
                     <p class="centered-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sit, earum error ab delectus id, incidunt cumque possimus accusamus eligendi excepturi quis temporibus sint corrupti molestiae commodi nemo, expedita debitis.</p>
 
                     <div class="centered-buttons">
-                      <button onclick="loadPage1()">Professional Experience</button>
-                      <button onclick="loadPage2()">Cultural Experience</button>
+                      <button class="about-me-btn" onclick="loadPage1()">Professional Experience</button>
+                      <button class="about-me-btn" onclick="loadPage2()">Cultural Experience</button>
                       
                     </div>
                   </div>
