--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
                 </div>
             </section>
             <!-- skills -->
-
+            <section>
+                <div id="formContainer"></div>
+            </section>
             <!-- footer -->
             <footer class="footer">
                 <div class="footer-conteiner">
@@ -352,5 +354,6 @@
         <script src="assets/js/fadeout.js"></script>
         <script src="assets/js/resume.js" ></script>
         <script src="assets/js/buttons.js"></script>
+        <script src="assets/js/contact.js"></script>
     </body>
 </html>
