adds few css changes in about me section responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
         <link rel="stylesheet" href="assets/css/footer.css" />
         <link rel="stylesheet" href="assets/css/contact.css">
+        <link rel="stylesheet" href="assets/css/secondaryPage.css">
     </head>
     
     <body onload="typeWriter(fName);">
