--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <li><a href="#about-me">About Me</a></li>
                                 <li><a href="#projects">Projects</a></li>
                                 <li><a href="#skills">Skills</a></li>
+                                <li><a href="#formContainer">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
